--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "front-erax-fit",
+  "name": "front-body-blast",
   "version": "0.0.1",
-  "description": "frontend for erax-fit project",
-  "productName": "front-erax-fit",
+  "description": "body-blast frontend project",
+  "productName": "front-body-blast",
   "author": "maksmak200305@gmail.com",
   "private": true,
   "scripts": {
