--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -5,7 +5,7 @@
   "productName": "front-body-blast",
   "author": "maksmak200305@gmail.com",
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
+    "lint": "eslint --ext .js,.ts,.vue,.cjs ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
@@ -26,6 +26,7 @@
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.3.0",
     "@types/lodash": "^4.14.197",
+    "@unocss/eslint-config": "^0.56.5",
     "@unocss/preset-attributify": "^0.54.2",
     "@unocss/preset-uno": "^0.54.2",
     "@unocss/transformer-directives": "^0.54.2",
@@ -35,6 +36,7 @@
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-boundaries": "^3.2.0",
     "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.0.0",
     "unocss": "^0.54.2",
     "unplugin-auto-import": "^0.16.6",
