--- a/back-body-blast/package.json
+++ b/back-body-blast/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^10.2.6",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.6",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/testing": "^10.2.6",
     "@nestjs/throttler": "^5.0.0",
@@ -41,10 +42,10 @@
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "passport": "^0.6.0",
-    "pg":"^8.11.3",
-    "reflect-metadata": "0.1.13",
     "passport-jwt": "^4.0.1",
-    "rxjs":"^7.8.1",
+    "pg": "^8.11.3",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -54,12 +55,12 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/supertest": "^2.0.12",
-    "supertest": "^6.3.3",
     "jest": "^29.5.0",
+    "prisma-nestjs-dto-generator": "^0.1.12",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "prisma-nestjs-dto-generator": "^0.1.12"
+    "ts-node": "^10.9.1"
   },
   "jest": {
     "moduleFileExtensions": [
