--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "swiper": "^10.3.1",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0"
