--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@splidejs/vue-splide": "^0.6.12",
     "@vee-validate/zod": "^4.11.8",
     "axios": "^1.2.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
-    "swiper": "^10.3.1",
     "vee-validate": "^4.11.8",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
