--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -29,22 +29,25 @@
     "@nestjs/core": "^10.2.6",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.6",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/testing": "^10.2.6",
     "@nestjs/throttler": "^5.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.5",
+    "@types/passport-local": "^1.0.36",
     "@types/validator": "^13.11.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "passport": "^0.6.0",
-    "pg":"^8.11.3",
-    "reflect-metadata": "0.1.13",
     "passport-jwt": "^4.0.1",
-    "rxjs":"^7.8.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.11.3",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -54,12 +57,12 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/supertest": "^2.0.12",
-    "supertest": "^6.3.3",
     "jest": "^29.5.0",
+    "prisma-nestjs-dto-generator": "^0.1.12",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "prisma-nestjs-dto-generator": "^0.1.12"
+    "ts-node": "^10.9.1"
   },
   "jest": {
     "moduleFileExtensions": [
