--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "swiper": "^10.3.1",
