--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@splidejs/vue-splide": "^0.6.12",
     "axios": "^1.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
