--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -17,6 +17,7 @@
     "@vee-validate/zod": "^4.11.8",
     "axios": "^1.2.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vee-validate": "^4.11.8",
