--- a/front-body-blast/.vscode/settings.json
+++ b/front-body-blast/.vscode/settings.json
@@ -14,6 +14,6 @@
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
   "i18n-ally.localesPaths": [
-    "src/i18n"
+    "/src/**/i18n"
   ]
 }
