--- a/front-body-blast/.vscode/settings.json
+++ b/front-body-blast/.vscode/settings.json
@@ -14,6 +14,10 @@
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
   "i18n-ally.localesPaths": [
-    "src/i18n"
+    "src/**/i18n"
+  ],
+  "i18n-ally.enabledParsers": [
+    "js",
+    "ts"
   ]
 }
