--- a/front-body-blast/package.json
+++ b/front-body-blast/package.json
@@ -12,6 +12,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.0.2",
     "@quasar/extras": "^1.16.4",
     "@splidejs/vue-splide": "^0.6.12",
     "@vee-validate/zod": "^4.11.8",
